@@ -31,22 +31,16 @@
   </developers>
 
   <properties>
-    <!-- For production usage JDK must be compatible with GraalVM and must be receiving security updates, effectively meaning the most recent LTS -->
     <jdk.version>25</jdk.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <argLine></argLine>
-    <vertx.version>5.0.11</vertx.version>
-    <slf4j.version>2.0.17</slf4j.version>
-    <junit-jupiter.version>6.0.3</junit-jupiter.version>
-    <junit-platform.version>6.0.1</junit-platform.version>
+    <vertx.version>5.1.5</vertx.version>
+    <jackson.version>2.21.4</jackson.version>
+    <slf4j.version>2.0.18</slf4j.version>
+    <junit-jupiter.version>6.1.2</junit-jupiter.version>
+    <junit-platform.version>6.1.2</junit-platform.version>
     <testcontainers.version>2.0.5</testcontainers.version>
-    <!-- 
-      Graal versions are often tied in to JDK versions, cannot upgrade to 24+ until using JDK 22+ 
-      See https://github.com/oracle/graal/issues/7651
-    -->
-    <graalvm.version>25.0.3</graalvm.version>
-    <jackson.version>2.21.2</jackson.version>
 
     <!-- The qe-version property exists so that the design mode project can override it to run with a specific version -->
     <qe-version>${project.version}</qe-version>
@@ -110,7 +104,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-enforcer-plugin</artifactId>
-          <version>3.6.2</version>
+          <version>3.6.3</version>
           <executions>
             <execution>
               <id>enforce-versions</id>
@@ -212,7 +206,7 @@
         <plugin>
           <groupId>com.github.spotbugs</groupId>
           <artifactId>spotbugs-maven-plugin</artifactId>
-          <version>4.9.8.3</version>
+          <version>4.10.3.0</version>
           <configuration>
             <fork>true</fork>
             <effort>Max</effort>
@@ -261,7 +255,7 @@
             <dependency>
               <groupId>com.puppycrawl.tools</groupId>
               <artifactId>checkstyle</artifactId>
-              <version>13.4.0</version>
+              <version>13.8.0</version>
             </dependency>
           </dependencies>
         </plugin>
@@ -269,7 +263,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.5.5</version>
+          <version>3.5.6</version>
           <configuration>
             <forkCount>1</forkCount>
             <parallel>none</parallel>
@@ -278,13 +272,6 @@
             <argLine>
               @{argLine}
               -Dfile.encoding=UTF-8
-              -XX:+UnlockExperimentalVMOptions
-              -XX:+EnableJVMCI
-              --enable-native-access=ALL-UNNAMED
-              --upgrade-module-path=${project.build.directory}/compiler
-              --add-exports org.graalvm.nativeimage/org.graalvm.nativeimage.impl=ALL-UNNAMED
-              --add-exports org.graalvm.polyglot/org.graalvm.polyglot.impl=ALL-UNNAMED
-              --add-exports org.graalvm.truffle.compiler/com.oracle.truffle.compiler=ALL-UNNAMED
             </argLine>
             <trimStackTrace>false</trimStackTrace>
             <excludes>
@@ -296,7 +283,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-failsafe-plugin</artifactId>
-          <version>3.5.5</version>
+          <version>3.5.6</version>
           <executions>
             <execution>
               <id>one-fork-integration-tests</id>
@@ -309,19 +296,9 @@
                 <useModulePath>false</useModulePath>
                 <reuseForks>true</reuseForks>
                 <workingDirectory>${project.basedir}</workingDirectory>
-                <consoleOutputReporter></consoleOutputReporter>
-                <argLine>@{argLine} -Dfile.encoding=UTF-8 -XX:+UnlockExperimentalVMOptions -XX:+UseJVMCICompiler --module-path=${compiler.dir} --upgrade-module-path=${compiler.dir}</argLine>
                 <argLine>
                   @{argLine}
                   -Dfile.encoding=UTF-8
-                  -XX:+UnlockExperimentalVMOptions
-                  -XX:+EnableJVMCI
-                  --enable-native-access=ALL-UNNAMED
-                  --module-path=${compiler.dir}
-                  --upgrade-module-path=${project.build.directory}/compiler
-                  --add-exports org.graalvm.nativeimage/org.graalvm.nativeimage.impl=ALL-UNNAMED
-                  --add-exports org.graalvm.polyglot/org.graalvm.polyglot.impl=ALL-UNNAMED
-                  --add-exports org.graalvm.truffle.compiler/com.oracle.truffle.compiler=ALL-UNNAMED
                 </argLine>
                 <excludes>
                   <exclude>**/sandbox/**</exclude>
@@ -340,17 +317,9 @@
                 <useModulePath>false</useModulePath>
                 <reuseForks>false</reuseForks>
                 <workingDirectory>${project.basedir}</workingDirectory>
-                <argLine>@{argLine} -Dfile.encoding=UTF-8 -XX:+UnlockExperimentalVMOptions -XX:+UseJVMCICompiler --module-path=${compiler.dir} --upgrade-module-path=${compiler.dir}</argLine>
                 <argLine>
                   @{argLine}
                   -Dfile.encoding=UTF-8
-                  -XX:+UnlockExperimentalVMOptions
-                  -XX:+EnableJVMCI
-                  --module-path=${compiler.dir}
-                  --upgrade-module-path=${project.build.directory}/compiler
-                  --add-exports org.graalvm.nativeimage/org.graalvm.nativeimage.impl=ALL-UNNAMED
-                  --add-exports org.graalvm.polyglot/org.graalvm.polyglot.impl=ALL-UNNAMED
-                  --add-exports org.graalvm.truffle.compiler/com.oracle.truffle.compiler=ALL-UNNAMED
                 </argLine>
                 <includes>
                   <include>**/*ForkIT*</include>
@@ -370,7 +339,7 @@
         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
-          <version>0.8.14</version>
+          <version>0.8.15</version>
           <executions>
             <execution>
               <id>jacoco-initialize</id>
@@ -398,6 +367,9 @@
                     <includes>
                       <include>*.exec</include>
                     </includes>
+                    <excludes>
+                      <exclude>uk/co/spudsoft/query/exec/procs/script/ProcessorScriptInstance*</exclude>
+                    </excludes>
                   </fileSet>
                 </fileSets>
               </configuration>
@@ -422,6 +394,7 @@
               </goals>
               <configuration>
                 <excludes>
+                  <exclude>uk/co/spudsoft/query/exec/procs/script/ProcessorScriptInstance*</exclude>
                 </excludes>
                 <dataFile>${project.build.directory}/jacoco-merged.exec</dataFile>
                 <rules>
@@ -456,7 +429,7 @@
         <plugin>
           <groupId>org.owasp</groupId>
           <artifactId>dependency-check-maven</artifactId>
-          <version>12.2.1</version>
+          <version>12.2.2</version>
           <configuration>
             <failBuildOnCVSS>8</failBuildOnCVSS>
             <failOnError>false</failOnError>
@@ -466,7 +439,7 @@
               dependency-check-supressions.xml
             </suppressionFiles>
             <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
-            <nvdApiKey>${NVD_API_KEY}</nvdApiKey>
+            <nvdDatafeedUrl>https://nvd.nist.gov/feeds/json/cve/2.0/nvdcve-2.0-{0}.json.gz</nvdDatafeedUrl>
           </configuration>
           <executions>
             <execution>
@@ -480,7 +453,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
-          <version>3.10.0</version>
+          <version>3.11.0</version>
           <executions>
             <execution>
               <id>copy-dependencies</id>
@@ -508,63 +481,6 @@
                 <outputProperty>dependencies-class-path</outputProperty>
               </configuration>
             </execution>
-            
-            <execution>
-              <id>copy-graalvm</id>
-              <phase>process-resources</phase>
-              <goals>
-                <goal>copy</goal>
-              </goals>
-              <configuration>
-                <outputDirectory>
-                  ${project.build.directory}/compiler
-                </outputDirectory>
-                <overWriteReleases>true</overWriteReleases>
-                <overWriteSnapshots>true</overWriteSnapshots>
-                <artifactItems>
-                  <!--
-                  Unfortunately Maven does not support resolving transitive dependencies
-                  here automatically. So the list of dependencies might need to be updated when upgrading
-                  to new versions of GraalVM.
-                  -->
-                  <artifactItem>
-                    <groupId>org.graalvm.sdk</groupId>
-                    <artifactId>collections</artifactId>
-                    <version>${graalvm.version}</version>
-                    <type>jar</type>
-                    <destFileName>collections.jar</destFileName>
-                  </artifactItem>
-                  <artifactItem>
-                    <groupId>org.graalvm.sdk</groupId>
-                    <artifactId>nativeimage</artifactId>
-                    <version>${graalvm.version}</version>
-                    <type>jar</type>
-                    <destFileName>nativeimage.jar</destFileName>
-                  </artifactItem>
-                  <artifactItem>
-                    <groupId>org.graalvm.sdk</groupId>
-                    <artifactId>word</artifactId>
-                    <version>${graalvm.version}</version>
-                    <type>jar</type>
-                    <destFileName>word.jar</destFileName>
-                  </artifactItem>
-                  <artifactItem>
-                    <groupId>org.graalvm.truffle</groupId>
-                    <artifactId>truffle-compiler</artifactId>
-                    <version>${graalvm.version}</version>
-                    <type>jar</type>
-                    <destFileName>truffle-compiler.jar</destFileName>
-                  </artifactItem>
-                  <artifactItem>
-                    <groupId>org.graalvm.compiler</groupId>
-                    <artifactId>compiler</artifactId>
-                    <version>${graalvm.version}</version>
-                    <type>jar</type>
-                    <destFileName>compiler.jar</destFileName>
-                  </artifactItem>
-                </artifactItems>
-              </configuration>
-            </execution>            
           </executions>
         </plugin>
 
@@ -622,7 +538,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
-          <version>3.21.0</version>
+          <version>3.22.0</version>
         </plugin>
 
         <plugin>
@@ -634,7 +550,7 @@
         <plugin>
           <groupId>org.cyclonedx</groupId>
           <artifactId>cyclonedx-maven-plugin</artifactId>
-          <version>2.9.1</version>
+          <version>2.9.2</version>
           <executions>
             <execution>
               <phase>package</phase>
@@ -708,7 +624,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-        <version>3.21.0</version>
+        <version>3.22.0</version>
         <configuration>
           <skip>true</skip>
           <skipDeploy>true</skipDeploy>
@@ -735,7 +651,7 @@
           <suppressionFiles>
             dependency-check-supressions.xml
           </suppressionFiles>
-          <nvdApiKey>${NVD_API_KEY}</nvdApiKey>
+          <nvdDatafeedUrl>https://nvd.nist.gov/feeds/json/cve/2.0/nvdcve-2.0-{0}.json.gz</nvdDatafeedUrl>
         </configuration>
       </plugin>
 
